Fix for distorted image relations

--- a/Resources/Private/Scss/_Includes/_csc.scss
+++ b/Resources/Private/Scss/_Includes/_csc.scss
@@ -116,8 +116,6 @@ DIV.csc-textpic DIV.csc-textpic-imagewrap .csc-textpic-image .csc-textpic-captio
 DIV.csc-textpic DIV.csc-textpic-imagewrap .csc-textpic-image IMG {
 	margin: 0;
 	vertical-align: bottom;
-	float: left;
-	width: 100%;
 }
 
 /* Space below each image (also in-between rows) */
